--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log-in</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
+    <section class="form-section">
+        <h1>Olá, mundo!</h1>
+
+        <div class="form-wrapper">
+            <form action="">
+
+                <div class="input-block">
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email">
+                </div>
+
+                <div class="input-block">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password">
+                </div>
+                <button class="btn-login" type="submit">Login</button>
+            </form>
+        </div>
+
+    </section>
 </body>
 </html>
