--- a/base/index.html
+++ b/base/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log-in</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="base/styles.css">
 </head>
 <body>
     <section class="form-section">
